Fix whitespace

--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ footer.entry-meta .blog-post-meta:not(.border-start) .border-end:last-child {
   margin-right: 33%;
 }
 
+article.border-bottom:has( + article > div.border),
+article.border-bottom:has( + .border-top) {
+  border-bottom-width: 0 !important;
+}
 
 /*
 .flex-auto {
